poke-app/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poke-app
  namespace: poke-app
spec:
  ingressClassName: nginx
  rules:
    - host: poke.local
      http:
        paths:
          - path: /api/v2
            pathType: Prefix
            backend:
              service:
                name: back
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
